<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.haoku.metagame.NewMatchActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/archetypeOneLabel"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arch_one" />

            <Spinner
                android:id="@+id/archetypeOneSelect"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/archetypeTwoLabel"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arch_two" />

            <Spinner
                android:id="@+id/archetypeTwoSelect"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/playerOneNameLabel"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_one" />

            <EditText
                android:id="@+id/playerOneNameField"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/playerTwoNameLabel"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_two" />

            <EditText
                android:id="@+id/playerTwoNameField"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                style="@style/LinearLayoutStyle">

                <TextView
                    android:id="@+id/playerOneWinsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/arch_one_wins" />

                <EditText
                    android:id="@+id/playerOneWinsField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                style="@style/LinearLayoutStyle">

                <TextView
                    android:id="@+id/playerTwoWinsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/arch_two_wins" />

                <EditText
                    android:id="@+id/playerTwoWinsField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/eventLabel"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event" />

            <EditText
                android:id="@+id/eventField"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/dateLabel"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/dateField"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/notesLabel"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes" />

            <EditText
                android:id="@+id/notesField"
                style="@style/LinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                style="@style/LinearLayoutStyle">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm_button_label"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel_button_label"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
